added link to preview pdf on google results page

--- a/app/views/10-0/google-results.html
+++ b/app/views/10-0/google-results.html
@@ -156,7 +156,40 @@
                                         <h2 class="bNg8Rb">Web results</h2>
                                         <div class="srg">
                                             
-                                            
+                    <!-- 19/20 preview pdf   -->
+                    <div class="g">
+                            <!--m-->
+                            <div data-hveid="CAIQAA" data-ved="2ahUKEwi57YaikuPeAhUnLMAKHUwZAhMQFSgAMAJ6BAgCEAA">
+                                <div class="rc">
+                                    <div class="r"><span class="sFZIhb b w xsm">[PDF]</span><a href="/public/downloads/preview-apprenticeship-funding-rules-training-providers-2019-2020-v1.pdf">
+                                            <h3 class="LC20lb">Apprenticeship funding rules for training providers</h3><br>
+                                            <div style="display:inline-block" class="TbwUpd"><cite
+                                                    class="iUh30">https://assets.../preview-apprenticeship-funding-rules-training-providers-2019-2020-v1.pdf</cite>
+                                            </div>
+                                        </a><span>
+                                            <div class="action-menu ab_ctl"><a class="GHDvEf ab_button" href="#" id="am-b2"
+                                                    aria-label="Result options" aria-expanded="false" aria-haspopup="true" role="button"
+                                                    jsaction="m.tdd;keydown:m.hbke;keypress:m.mskpe"
+                                                    data-ved="2ahUKEwi57YaikuPeAhUnLMAKHUwZAhMQ7B0wAnoECAIQAw"><span
+                                                        class="mn-dwn-arw"></span></a>
+                                                <div class="action-menu-panel ab_dropdown" role="menu" tabindex="-1"
+                                                    jsaction="keydown:m.hdke;mouseover:m.hdhne;mouseout:m.hdhue"
+                                                    data-ved="2ahUKEwi57YaikuPeAhUnLMAKHUwZAhMQqR8wAnoECAIQBA">
+                                                    <ol>
+                                                        <li class="action-menu-item ab_dropdownitem" role="menuitem"><a class="fl">Cached</a>
+                                                        </li>
+                                                    </ol>
+                                                </div>
+                                            </div>
+                                        </span></div>
+                                    <div class="s">
+                                        <div><span class="st">This document sets out the <em>funding rules</em> for all training providers delivering apprenticeships from 1 August 2019 to 31 July 2020.</span></div>
+                                    </div>
+                                    <div data-base-uri="/search" id="ed_1" data-ved="2ahUKEwi57YaikuPeAhUnLMAKHUwZAhMQ2Z0BMAJ6BAgCEAY"></div>
+                                </div>
+                            </div>
+                            <!--n-->
+                        </div>
                                             
                                             
                     <!-- New Hub -->
