--- a/app/views/agreement/v12-0/agreement-govuk.html
+++ b/app/views/agreement/v12-0/agreement-govuk.html
@@ -237,7 +237,7 @@
 
 <div class="govspeak">
 
-                        <p>For the provision of levy-funded apprenticeship training</p>
+                        <p style="font-size:23px">For the provision of levy-funded apprenticeship training.</p>
                         <h3  id="background">Background</h2>
                         <p>This Agreement sets out the terms for use of the Apprenticeship Service by the Employer and the obligations by which the Employer agrees to be bound.</p>
             
