--- a/app/views/agreement/v12-0/agreement.html
+++ b/app/views/agreement/v12-0/agreement.html
@@ -120,7 +120,8 @@ Agreement with the Education and Skills Funding Agency (ESFA)
         <!-- Key facts -->
         <!-- <h2 class="govuk-heading-m">Key features of the agreement</h2> -->
         <div class="govuk-inset-text">
-            <p class="govuk-body">View the full agreement, share or print it with the following link: <a href="agreement-govuk" target="_blank" class="govuk-link govuk-link--no-visited-state">https://www.gov.uk/government/publications/agreement-between-an-employer-and-the-education-and-skills-funding-agency-esfa</a></p>
+            <p class="govuk-body">View the full agreement, share or print it with the following link: <a href="agreement-govuk" target="_blank" class="govuk-link govuk-link--no-visited-state">https://www.gov.uk/government/publications/agreement-between-an-employer-and-the-education-and-skills-funding-agency-esfa</a> (opens in a new window or tab).
+            </p>
         </div>
         <!-- <p class="govuk-body">Key features of the agreement:</p>
         <ul class="govuk-list govuk-list--bullet">
