--- a/app/views/agreement/v12-0/agreement.html
+++ b/app/views/agreement/v12-0/agreement.html
@@ -119,10 +119,7 @@ Agreement with the Education and Skills Funding Agency (ESFA)
 
         <!-- Key facts -->
         <!-- <h2 class="govuk-heading-m">Key features of the agreement</h2> -->
-        <div class="govuk-inset-text">
-            <p class="govuk-body">View the full agreement, share or print it with the following link: <a href="agreement-govuk" target="_blank" class="govuk-link govuk-link--no-visited-state">https://www.gov.uk/government/publications/agreement-between-an-employer-and-the-education-and-skills-funding-agency-esfa</a> (opens in a new window or tab).
-            </p>
-        </div>
+        
         <!-- <p class="govuk-body">Key features of the agreement:</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>you have read and agree to the <a href="agreement-full">agreement</a></li>
@@ -199,7 +196,11 @@ Agreement with the Education and Skills Funding Agency (ESFA)
         <!-- https://www.gov.uk/paye-online/enrol example of printing guidance - opens in new tab then triggers print dialog -->
 
 
-
+        <h2 class="govuk-heading-m">The full agreement</h2>
+        <!-- <div class="govuk-inset-text"> -->
+            <p class="govuk-body">View the full agreement, share or print it with the following link (opens in a new window or tab): <a href="agreement-govuk" target="_blank" class="govuk-link govuk-link--no-visited-state">https://www.gov.uk/government/publications/agreement-between-an-employer-and-the-education-and-skills-funding-agency-esfa</a>
+            </p>
+        <!-- </div> -->
 
         <!-- Warning text -->
         <!-- <br> -->
@@ -229,7 +230,7 @@ Agreement with the Education and Skills Funding Agency (ESFA)
                             <div class="govuk-radios__item">
                                     <input class="govuk-radios__input" id="app-1" name="agreementSign" type="radio" value="yes">
                                     <label class="govuk-label govuk-radios__label" for="app-1" style="padding-bottom:0">
-                                            Yes, I accept the agreement
+                                            Yes, I have read the agreement and accept it
                                     </label>
                                 </div>
                             <div class="govuk-radios__item">
