--- a/app/views/agreement/v12-0/agreement.html
+++ b/app/views/agreement/v12-0/agreement.html
@@ -89,52 +89,10 @@ Agreement with the Education and Skills Funding Agency (ESFA)
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <!-- Title -->
         <h1 class="govuk-heading-xl">Agreement between {{data['orgName'] or "Assurance Aerospace Ltd" }} and the Education and Skills Funding Agency (ESFA)</h1>
-
-        <!-- <p class="govuk-body">{{data['orgName'] or "Assurance Aerospace Ltd" }}</p> -->
         
-        <!-- Explanation/intro -->
-        <!-- <p class="govuk-body">Every employer taking on apprentices must sign the <a href="agreement-full">agreement</a>.</p>  -->
-        
-        <!-- Notification about version -->
-        <!-- <div class="govuk-inset-text"> -->
-            <p class="govuk-body">We updated the agreement on 1 May 2018.</p>
-        <!-- </div> -->
-
-        <!-- <p class="govuk-body">The agreement includes the terms and conditions of:</p> -->
-
-        <!-- <ul class="govuk-list govuk-list--bullet">
-            
-        </ul> -->
-        <!-- <p class="govuk-body">You can sign the agreement later, but {{data['orgName'] or "Assurance Aerospace Ltd" }} will not be able to get or reserve funding until you do. </p> -->
-        <!-- <p class="govuk-body">Without a signed agreement, you can still register for an apprenticeship service account and add:</p>
-        <ul class="govuk-list govuk-list--bullet">
-            <li>your colleagues </li>
-            <li>apprentice details</li>
-            <li>levy funds (if applicable)</li>
-        </ul> -->
-
-        
-
-        <!-- Key facts -->
-        <!-- <h2 class="govuk-heading-m">Key features of the agreement</h2> -->
-        
-        <!-- <p class="govuk-body">Key features of the agreement:</p>
-        <ul class="govuk-list govuk-list--bullet">
-            <li>you have read and agree to the <a href="agreement-full">agreement</a></li>
-            <li>using the apprenticeship service</li>
-            <li>using government funding to train and assess apprentices</li>
-            <li>working with the ESFA</li>
-            <li>if you have levy funds, you will only use them to pay for apprenticeship training and assessment</li>
-            <li>you will pay co-investment costs for any apprenticeship training</li>
-            <li>you have a contract with your training provider</li>
-            <li>you understand we may ask you to repay any funding if you don’t follow the rules of this agreement</li>
-            <li>you understand we may ask you to pay any remaining training if you don’t follow the rules of this agreement </li>
-            <li>you must help with the investigation if the ESFA suspects that you are not following this agreement or the funding rules</li>     
-        </ul> -->
-        <!-- <p class="govuk-body">You can also <a href="/accounts/VYJW8B/agreements/MK77WW/agreement-pdf" target="_blank" class="govuk-link">view the agreement in PDF format</a> (400KB, 23 pages).</p> -->
-
+        <p class="govuk-body">We updated the agreement on 1 May 2018.</p>
+      
         <h2 class="govuk-heading-m">Key features of the agreement</h2>
         <p class="govuk-body">The employer must:</p>
         <ul class="govuk-list govuk-list--bullet">
@@ -148,105 +106,43 @@ Agreement with the Education and Skills Funding Agency (ESFA)
             <li>change the terms of the agreement and any part of the apprenticeship service</li>
         </ul>
 
-
-
-
-
-
-
-
-        
-
-
-
-
-
-
-        <!-- <br><br><br><br>
-
-        <p class="govuk-body">To view the agreement later, save this link: <a href="https://www.gov.uk/government/publications/apprenticeship-agreement-for-employers-1-May-2018" target="_blank" class="govuk-link govuk-link--no-visited-state">https://www.gov.uk/government/publications/apprenticeship-agreement-for-employers-1-May-2018</a> or <a href="#" class="govuk-link govuk-link--no-visited-state">print the agreement</a>.</p> -->
-
-        
-
-        <!-- <div class="govuk-inset-text">
-            <p class="govuk-body">View the agreement later at the following URL. You can also print or save the page.</p>
-            <p class="govuk-body"><a href="https://www.gov.uk/government/publications/apprenticeship-agreement-for-employers-1-May-2018" target="_blank" class="govuk-link govuk-link--no-visited-state">https://www.gov.uk/government/publications/apprenticeship-agreement-for-employers-1-May-2018</a></p>
-        </div>
-
-        <div class="govuk-inset-text">
-            <p class="govuk-body">View the agreement later at the following URL. You can also print or save the page.</p>
-            <p class="govuk-body govuk-!-font-weight-bold">https://www.gov.uk/government/publications/apprenticeship-agreement-for-employers-1-May-2018</p>
-            <p class="govuk-body"><a href="#" class="govuk-link govuk-link--no-visited-state">Copy link</a></p>
-        </div>
-
-        <div class="govuk-inset-text">
-            <p class="govuk-body">View the agreement later at the following link, <span class="govuk-body govuk-!-font-weight-bold">https://www.gov.uk/government/publications/apprenticeship-agreement-for-employers-1-May-2018</span>.</p>
-            <p class="govuk-body">You could:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li><a href="#" class="govuk-link govuk-link--no-visited-state">Copy the link to the agreement</a></li>
-                <li><a href="#" class="govuk-link govuk-link--no-visited-state">Print the agreement</a></li>
-                
-            </ul>
-        </div>
-
-        <p class="govuk-body"><a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706170/ESFA_Apprenticeship_Agreement_for_Employers_1_May_2018.pdf" target="_blank" class="govuk-link">https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706170/ESFA_Apprenticeship_Agreement_for_Employers_1_May_2018.pdf</a></p> -->
-
-        <!-- <br><br><br><br> -->
-
-        <!-- https://www.gov.uk/paye-online/enrol example of printing guidance - opens in new tab then triggers print dialog -->
-
-
         <h2 class="govuk-heading-m">The full agreement</h2>
-        <!-- <div class="govuk-inset-text"> -->
-            <p class="govuk-body">View the full agreement, share or print it with the following link (opens in a new window or tab): <a href="agreement-govuk" target="_blank" class="govuk-link govuk-link--no-visited-state">https://www.gov.uk/government/publications/agreement-between-an-employer-and-the-education-and-skills-funding-agency-esfa</a>
-            </p>
-        <!-- </div> -->
+        <p class="govuk-body">View the full agreement, share or print it with the following link (opens in a new window or tab): <a href="agreement-govuk" target="_blank" class="govuk-link govuk-link--no-visited-state">https://www.gov.uk/government/publications/agreement-between-an-employer-and-the-education-and-skills-funding-agency-esfa</a></p>
 
-        <!-- Warning text -->
-        <!-- <br> -->
         <div class="govuk-warning-text">
-                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text govuk-!-font-weight-bold">
-                  <span class="govuk-warning-text__assistive">Warning</span>
-                  The agreement is legally binding. If the employer breaks it, we could close their account and stop them running apprenticeships.
-                </strong>
-              </div>
-        <!-- <br> -->
+            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+            <strong class="govuk-warning-text__text govuk-!-font-weight-bold">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                The agreement is legally binding. If the employer breaks it, we could close their account and stop them running apprenticeships.
+            </strong>
+        </div>
 
-        <!-- Radio buttons -->
-        <!-- <h2 class="govuk-heading-m">
-            Do you accept the agreement?
-        </h2>
-            <p class="govuk-body">You can continue registering and accept the agreement later. Your company will not get any government funding until you accept it.</p> -->
         <form>
-                <div class="govuk-form-group">
-                        <fieldset class="govuk-fieldset" aria-describedby="how-contacted-conditional-hint">
-                          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                            <h1 class="govuk-fieldset__heading">
-                                    Do you accept the agreement?
-                            </h1>
-                          </legend>
-                          <div class="govuk-radios govuk-radios--conditional" data-module="radios">
-                            <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="app-1" name="agreementSign" type="radio" value="yes">
-                                    <label class="govuk-label govuk-radios__label" for="app-1" style="padding-bottom:0">
-                                            Yes, I have read the agreement and accept it
-                                    </label>
-                                </div>
-                            <div class="govuk-radios__item">
-                              <input class="govuk-radios__input" id="app-4" name="agreementSign" type="radio" value="notYet" data-aria-controls="conditional-app-4">
-                              <label class="govuk-label govuk-radios__label" for="app-4">
-                                    I’ll review it later
-                              </label> </div>
-                            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-app-4">
-                                <p class="govuk-body">You can continue registering and accept the agreement later. {{data['orgName'] or "Assurance Aerospace Ltd" }} will not be able to get or reserve funding until you accept.</p>
-                            </div>
-                          </div>
-                        </fieldset>
-                      </div>
-
-
-            
+            <div class="govuk-form-group">
+                <fieldset class="govuk-fieldset" aria-describedby="how-contacted-conditional-hint">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h1 class="govuk-fieldset__heading">
+                            Do you accept the agreement?
+                    </h1>
+                    </legend>
+                    <div class="govuk-radios govuk-radios--conditional" data-module="radios">
+                    <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="app-1" name="agreementSign" type="radio" value="yes">
+                            <label class="govuk-label govuk-radios__label" for="app-1" style="padding-bottom:0">
+                                    Yes, I have read the agreement and accept it
+                            </label>
+                        </div>
+                    <div class="govuk-radios__item">
+                        <input class="govuk-radios__input" id="app-4" name="agreementSign" type="radio" value="notYet" data-aria-controls="conditional-app-4">
+                        <label class="govuk-label govuk-radios__label" for="app-4">
+                                I’ll review it later
+                        </label> </div>
+                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-app-4">
+                        <p class="govuk-body">You can continue registering and accept the agreement later. {{data['orgName'] or "Assurance Aerospace Ltd" }} will not be able to get or reserve funding until you accept.</p>
+                    </div>
+                    </div>
+                </fieldset>
+            </div>
         </form>
 
         <!-- Call to action button -->
