--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,14 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
-                <a href="/10-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-10-0</a> (tested 17/05, 21/05 and ???)
+                <a href="/11-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-11-0</a> (in progress)
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths UPDATED</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - change of circs UPDATED</li>
+                </ul>
+            </li>
+            <li>
+                <a href="/10-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-10-0</a> (tested 17/05 - 10/06)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">19/20 preview</span> - section added to funding rules home</li>
                     <li><span class="govuk-!-font-weight-bold">19/20 preview</span> - example PDFs added</li>
