--- a/app/views/11-0/manual-page.html
+++ b/app/views/11-0/manual-page.html
@@ -338,7 +338,7 @@
                                                 {% endif %}
                                                 <!-- Flow chart PNG -->
                                                 {% if myData.pngflow == "true" %}
-                                                    <img class="flow-chart" style="width: auto; height: auto; max-width: 100%; margin-bottom: 30px" alt="Flowchart to find out what English and maths training your apprentice should do. You can find this information in the support for English and maths section." src="/public/images/english-maths-flow-6.png">
+                                                    <img class="flow-chart" style="width: auto; height: auto; max-width: 100%; margin-bottom: 30px" alt="Flow chart to find out what English and maths training your apprentice should do. You can find this information in the support for English and maths section." src="/public/images/english-maths-flow-6.png">
                                                 {% endif %}
                                                 <!-- Text decision tree -->
                                                 {% if myData.textflow == "true" %}
@@ -347,7 +347,7 @@
                                             <!-- Change circs flowchart -->
                                             {% elif subsection.id == "flowchart-change-of-circs" %}
                                                 {% if myData.chocChart == "pngflow" %}
-                                                    <img class="flow-chart" style="width: auto; height: auto; max-width: 100%; margin-bottom: 30px" alt="Flowchart to find out what to do if your apprentice wants to take a break in learning. You can find this information in the summary of action following a change in circumstances section." src="/public/images/change-of-circs-3.png">
+                                                    <img class="flow-chart" style="width: auto; height: auto; max-width: 100%; margin-bottom: 30px" alt="Flow chart about what to do if there is a break in learning, withdrawal or redundancy. You can find this information in the summary of action following a change in circumstances section." src="/public/images/change-of-circs-3.png">
                                                 {% endif %}
                                             <!-- recognition of prior learning flowcharts -->
                                             {% elif subsection.id == "accounting-prior-learning" %}
