some clarification content and contact details

--- a/app/views/11-0/manual-page.html
+++ b/app/views/11-0/manual-page.html
@@ -91,9 +91,9 @@
                     <h3 class="govuk-heading-m">Training providers</h3>
                     <p class="govuk-body">For help and support you can:</p>
                     <ul class="govuk-list govuk-list--bullet">
-                        <li>email us at <a href="mailto:SDE.servicedesk@education.gov.uk">SDE.servicedesk@education.gov.uk </a> </li>
-                        <li>phone us on 0370 267 0001</li>
-                        <li>contact your provider management advisor </li>
+                        <li>email us at <a href="mailto:helpdesk@manage-apprenticeships.service.gov.uk">helpdesk@manage-apprenticeships.service.gov.uk</a> </li>
+                        <li>phone us on 0800 015 0600</li>
+                        <li>contact your provider management advisor</li>
                     </ul>
                     <h3 class="govuk-heading-m">Employers</h3>
                     <p class="govuk-body">For help and support, phone us on 0800 015 0600.</p>
