--- a/app/views/11-0/rules-years.html
+++ b/app/views/11-0/rules-years.html
@@ -284,7 +284,7 @@
         </li>
         {% if myData.preview == "true" %}
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed ">
-          <a class="gem-c-contents-list__link " data-track-category="contentsClicked" data-track-action="content_item 4" data-track-label="#previous-rules" data-track-options='{"dimension29":"Preview of the 2019 to 2020 rules"}' href="#preview">Preview of the 2019 to 2020 rules</a>
+          <a class="gem-c-contents-list__link " data-track-category="contentsClicked" data-track-action="content_item 4" data-track-label="#previous-rules" data-track-options='{"dimension29":"Clarification version of the 2019 to 2020 rules"}' href="#clarification">Clarification version of the 2019 to 2020 rules</a>
         </li>
         {% endif %}
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed ">
@@ -436,11 +436,11 @@
 
 {% if myData.preview == "true" %}
 
-<h2 id="preview">Preview of the 2019 to 2020 rules</h2>
+<h2 id="clarification">Clarification version of the 2019 to 2020 rules</h2>
 
 <p>The 2019 to 2020 rules apply to apprenticeships starting between 1 August 2019 and 31 July 2020. We’re issuing them now to give you time to prepare for any changes.</p>
 
-<p>View a preview of the apprenticeship funding rules for:</p>
+<p>View the clarification version of the apprenticeship funding rules for:</p>
 
 <ul>
     <li>
@@ -484,9 +484,9 @@
 <p>For help and support you can:</p>
 
 <ul>
-  <li>email us at <a href="mailto:SDE.servicedesk@education.gov.uk">SDE.servicedesk@education.gov.uk</a>
+  <li>email us at <a href="mailto:helpdesk@manage-apprenticeships.service.gov.uk">helpdesk@manage-apprenticeships.service.gov.uk</a>
 </li>
-  <li>phone us on 0370 267 0001</li>
+  <li>phone us on 0800 015 0600</li>
   <li>contact your provider management advisor</li>
 </ul>
 
