--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,6 +20,8 @@
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths UPDATED</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - change of circs UPDATED</li>
+                    <li><span class="govuk-!-font-weight-bold">home page</span> - preview changed to clarification</li>
+                    <li><span class="govuk-!-font-weight-bold">contact details</span> - updated on home page and contact us page</li>
                 </ul>
             </li>
             <li>
