preview pdfs and updated flow chart pdfs for 18 19

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,8 +18,9 @@
             <li>
                 <a href="/11-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-11-0</a> (in progress)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths UPDATED</li>
-                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - change of circs UPDATED</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart/findability</span> - eng/maths UPDATED</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart/findability</span> - change of circs UPDATED</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - RPL - default state is that they're not visible</li>
                     <li><span class="govuk-!-font-weight-bold">home page</span> - preview changed to clarification</li>
                     <li><span class="govuk-!-font-weight-bold">contact details</span> - updated on home page and contact us page</li>
                 </ul>
