agreement and contact changes

--- a/app/views/11-0/rules-years.html
+++ b/app/views/11-0/rules-years.html
@@ -484,9 +484,8 @@
 <p>For help and support you can:</p>
 
 <ul>
-  <li>email us at <a href="mailto:helpdesk@manage-apprenticeships.service.gov.uk">helpdesk@manage-apprenticeships.service.gov.uk</a>
-</li>
-  <li>phone us on 0800 015 0600</li>
+  <li>email us at <a href="mailto:SDE.servicedesk@education.gov.uk">SDE.servicedesk@education.gov.uk</a> </li>
+  <li>phone us on 0370 267 0001</li>
   <li>contact your provider management advisor</li>
 </ul>
 
