--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,13 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
-                <a href="/11-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-11-0</a> (in progress)
+                <a href="/12-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-12-0</a> (in progress)
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">home page</span> - versions for Aug go live</li>
+                </ul>
+            </li>
+            <li>
+                <a href="/11-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-11-0</a> (tested ???)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">flow chart/findability</span> - eng/maths UPDATED</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart/findability</span> - change of circs UPDATED</li>
