--- a/app/views/12-0/rules-years.html
+++ b/app/views/12-0/rules-years.html
@@ -360,7 +360,7 @@
   <li>
 <p><span class="attachment-inline">
     <a href="/public/downloads/clarification-version-apprenticeship-funding-rules-2019-2020-summary-of-changes.pdf">apprenticeship funding rules 2019 to 2020: summary of changes</a>
-    (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">95KB</span>, <span class="page-length">4 pages</span>).
+    (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">95KB</span>, <span class="page-length">4 pages</span>)
     </span></p>
   </li>
   <li>
@@ -407,7 +407,7 @@
   <p>You can also view <span id="attachment_3280306" class="attachment-inline">
       <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/786372/Apprenticeship_funding_rules_August_2018_to_July_2019_summary_of_changes.pdf">apprenticeship funding rules 2018 to 2019: summary of changes</a>
       (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">164KB</span>, <span class="page-length">4 pages</span>)
-      </span></p>
+      </span>.</p>
 
 
 <h2 id="the-2017-to-2018-rules">The 2017 to 2018 rules</h2>
